tests/snapshots/cli__list@toplevel_nesting.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/toplevel_nesting.flake.nix"
    - list
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
· crane - github:ipetkov/crane
     flake-utils => flake-utils
     nixpkgs => nixpkgs
     rust-overlay => rust-overlay
· nixpkgs - github:nixos/nixpkgs/nixos-unstable
· rust-overlay - github:oxalica/rust-overlay
     flake-utils => flake-utils
     nixpkgs => nixpkgs

----- stderr -----
