tests/snapshots/cli__list_format@let_wrapped_simple.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/let_wrapped.flake.nix"
    - list
    - "--format"
    - simple
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
nixpkgs

----- stderr -----
