tests/snapshots/cli__list_format@let_wrapped_toplevel.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/let_wrapped.flake.nix"
    - list
    - "--format"
    - toplevel
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
nixpkgs

----- stderr -----
