tests/snapshots/cli__list_format@root_raw.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/root.flake.nix"
    - list
    - "--format"
    - raw
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
{
    "crane": Input {
        id: Segment(
            "crane",
        ),
        flake: true,
        url: "github:ipetkov/crane",
        follows: [
            Indirect {
                path: AttrPath(
                    [
                        Segment(
                            "flake-utils",
                        ),
                    ],
                ),
                target: Some(
                    AttrPath(
                        [
                            Segment(
                                "flake-utils",
                            ),
                        ],
                    ),
                ),
            },
            Indirect {
                path: AttrPath(
                    [
                        Segment(
                            "nixpkgs",
                        ),
                    ],
                ),
                target: Some(
                    AttrPath(
                        [
                            Segment(
                                "nixpkgs",
                            ),
                        ],
                    ),
                ),
            },
            Indirect {
                path: AttrPath(
                    [
                        Segment(
                            "rust-overlay",
                        ),
                    ],
                ),
                target: Some(
                    AttrPath(
                        [
                            Segment(
                                "rust-overlay",
                            ),
                        ],
                    ),
                ),
            },
        ],
        range: Range {
            start: 373,
            end: 395,
        },
    },
    "flake-utils": Input {
        id: Segment(
            "flake-utils",
        ),
        flake: true,
        url: "github:numtide/flake-utils",
        follows: [],
        range: Range {
            start: 153,
            end: 181,
        },
    },
    "nixpkgs": Input {
        id: Segment(
            "nixpkgs",
        ),
        flake: true,
        url: "github:nixos/nixpkgs/nixos-unstable",
        follows: [],
        range: Range {
            start: 91,
            end: 128,
        },
    },
    "rust-overlay": Input {
        id: Segment(
            "rust-overlay",
        ),
        flake: true,
        url: "github:oxalica/rust-overlay",
        follows: [
            Indirect {
                path: AttrPath(
                    [
                        Segment(
                            "flake-utils",
                        ),
                    ],
                ),
                target: Some(
                    AttrPath(
                        [
                            Segment(
                                "flake-utils",
                            ),
                        ],
                    ),
                ),
            },
            Indirect {
                path: AttrPath(
                    [
                        Segment(
                            "nixpkgs",
                        ),
                    ],
                ),
                target: Some(
                    AttrPath(
                        [
                            Segment(
                                "nixpkgs",
                            ),
                        ],
                    ),
                ),
            },
        ],
        range: Range {
            start: 217,
            end: 246,
        },
    },
}

----- stderr -----
