tests/snapshots/cli__list_format@root_simple.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/root.flake.nix"
    - list
    - "--format"
    - simple
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
crane
crane.flake-utils
crane.nixpkgs
crane.rust-overlay
flake-utelinos
nixpkgs
rust-overlay
rust-overlay.flake-utils
rust-overlay.nixpkgs

----- stderr -----
