tests/snapshots/cli__list_format@root_toplevel.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/root.flake.nix"
    - list
    - "--format"
    - toplevel
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
crane
flake-utils
nixpkgs
rust-overlay

----- stderr -----
